@@ -108,7 +108,11 @@
                       </tal:tags>
                     </div>
                   </div>
-                  <div class="comments" i18n:domain="plone" i18n:translate="comments_header">
+                  <div class="comments"
+                      i18n:domain="plone"
+                      i18n:translate="comments_header"
+                      tal:condition="python: view.comments_enabled(item)"
+                      >
                     Comments (<span tal:content="python:view.amount_of_replies(item)"
                                     i18n:name="comments"></span>)
                   </div>
