@@ -5,7 +5,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Disable the 'Comments ()' string if discussion is disabled on the given
+  BlogEntry.
+  [elio.schmutz]
 
 
 1.3 (2013-04-16)
